Style y-alignment bug

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -321,7 +321,7 @@ $footer-height: 2.5rem;
       margin-top: 30px;
     }
 
-    ul > li:first-child {
+    .home-list > li:first-child {
       margin-top: 30px;
     }
   }
